
#All exported headers
nobase_include_HEADERS= \
opx/sai_acl_npu_api.h opx/sai_infra_api.h opx/sai_npu_fdb.h \
opx/sai_port_common.h opx/sai_switch_common.h \
opx/sai_acl_type_defs.h opx/sai_l3_api.h opx/sai_npu_hostif.h \
opx/sai_port_utils.h opx/sai_switch_init_config.h \
opx/sai_acl_utils.h opx/sai_l3_common.h opx/sai_npu_lag.h \
opx/sai_qos_buffer_util.h opx/sai_switch_utils.h \
opx/sai_common_utils.h opx/sai_l3_util.h opx/sai_npu_mirror.h \
opx/sai_qos_common.h opx/sai_tunnel.h opx/sai_debug_utils.h \
opx/sai_lag_api.h opx/sai_npu_port.h  opx/sai_qos_util.h \
opx/sai_tunnel_npu_api.h opx/sai_event_log.h   \
opx/sai_lag_callback.h opx/sai_npu_qos.h \
opx/sai_samplepacket_defs.h opx/sai_tunnel_util.h \
opx/sai_fdb_api.h opx/sai_lag_common.h \
opx/sai_npu_samplepacket.h opx/sai_samplepacket_util.h \
opx/sai_udf_common.h opx/sai_fdb_common.h opx/sai_map_utl.h \
opx/sai_npu_stp.h  opx/sai_shell.h opx/sai_udf_npu_api.h \
opx/sai_gen_utils.h opx/sai_mirror_defs.h  opx/sai_npu_switch.h \
opx/sai_shell_npu.h opx/sai_vlan_api.h \
opx/sai_hash_object.h  opx/sai_mirror_util.h  opx/sai_npu_vlan.h \
opx/sai_stp_defs.h opx/sai_vlan_common.h \
opx/sai_hostif_common.h opx/sai_npu_api_plugin.h \
opx/sai_oid_utils.h opx/sai_stp_util.h \
opx/sai_bridge_api.h opx/sai_bridge_common.h \
opx/sai_bridge_npu_api.h \
opx/sai_l2mc_api.h opx/sai_l2mc_common.h \
opx/sai_mcast_api.h opx/sai_mcast_common.h \
opx/sai_npu_l2mc.h opx/sai_npu_mcast.h \
opx/sai_qos_port_util.h
